build: 部署文件内容调整，增加nginx和uwsgi配置

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,8 +4,11 @@ WORKDIR /app
 
 COPY ./requirements.txt ./entrypoint.sh /app/
 
-RUN sed -i 's/psycopg2==/psycopg2-binary==/' /aap/requirements.txt && \
+RUN sed -i 's/psycopg2==/psycopg2-binary==/' /app/requirements.txt && \
     pip install -i https://pypi.tuna.tsinghua.edu.cn/simple -U -r /app/requirements.txt && \
+    sed -i 's/dl-cdn.alpinelinux.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apk/repositories && \
+    apk add --no-cache python3-dev build-base linux-headers pcre-dev && \
+    pip install -i https://pypi.tuna.tsinghua.edu.cn/simple uwsgi && \
     pip cache purge && \
     rm -f /app/requirements.txt
 
