ci: 调整为socket方式代理访问后端

--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -6,7 +6,7 @@
 chdir           = /app
 # Django's wsgi file
 module          = fillexcel.wsgi
-wsgi-file       = /app/fillexcel/wsgi.py
+# wsgi-file       = /app/fillexcel/wsgi.py
 # the virtualenv (full path)
 # home            = /path/to/virtualenv
 
@@ -17,9 +17,8 @@ master          = true
 processes       = 2
 # the socket (use the full path to be safe
 socket          = /app/fillexcel.sock
-http            = 0.0.0.0:4200
 
 # ... with appropriate permissions - may be needed
-# chmod-socket    = 664
+chmod-socket    = 666
 # clear environment on exit
 vacuum          = true
