--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -34,7 +34,7 @@ http {
     # the upstream component nginx needs to connect to
     upstream django {
         # server unix:///path/to/your/mysite/mysite.sock; # for a file socket
-        server django1:4200; # for a web port socket (we'll use this first)
+        server unix:///app/fillexcel.sock; # for a web port socket (we'll use this first)
     }
 
     server {
@@ -45,18 +45,19 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
-            root /app/web;
+            root /app/html;
             index index.htm index.html;
             try_files $uri $uri/ /index.html;
         }
 
         location ~* \.(ico|jpg|png|js|css|woff|ttf)$ {
-            root    /app/web;
+            root    /app/html;
             expires 6h;
         }
 
-        location /api/ {
-            proxy_pass http://django/;
+        location /api {
+            rewrite ^/api/(.*)$ /$1 break;
+            uwsgi_pass django;
             include  /etc/nginx/uwsgi_params;
         }
 
