build: 容器构建调整，nginx和uwsgi通过网络通信

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -34,7 +34,7 @@ http {
     # the upstream component nginx needs to connect to
     upstream django {
         # server unix:///path/to/your/mysite/mysite.sock; # for a file socket
-        server unix:///app/fillexcel.sock; # for a web port socket (we'll use this first)
+        server django1:4200; # for a web port socket (we'll use this first)
     }
 
     server {
@@ -45,13 +45,13 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
-            root /app/html;
+            root /app/web;
             index index.htm index.html;
             try_files $uri $uri/ /index.html;
         }
 
         location ~* \.(ico|jpg|png|js|css|woff|ttf)$ {
-            root    /app/html;
+            root    /app/web;
             expires 6h;
         }
 
