--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -16,9 +16,9 @@ master          = true
 # maximum number of worker processes
 processes       = 2
 # the socket (use the full path to be safe
-socket          = /app/fillexcel.sock
+socket          = 0.0.0.0:4200
 
 # ... with appropriate permissions - may be needed
-chmod-socket    = 666
+# chmod-socket    = 664
 # clear environment on exit
 vacuum          = true
