--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.5"
 services:
   django1:
-    build: docker
+    build: ./
     image: fillexcel:1.0
     container_name: django1
     ports:
@@ -10,7 +10,7 @@ services:
       TZ: Asia/Shanghai
     working_dir: /app
     volumes:
-      - ./:/app
+      - ./logs:/app/logs
     networks:
       fillexcel-net:
         aliases:
@@ -24,8 +24,8 @@ services:
       TZ: Asia/Shanghai
     working_dir: /app/web
     volumes:
-      - ./:/app
-      - ./logs:/var/log/nginx
+      - ./web:/app/web
+      - ./nginx/logs:/var/log/nginx
       - ./config/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - django1
