--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -17,7 +17,8 @@ master          = true
 processes       = 2
 # the socket (use the full path to be safe
 socket          = 0.0.0.0:4200
-
+uid             = 101
+gid             = 101
 # ... with appropriate permissions - may be needed
 # chmod-socket    = 664
 # clear environment on exit
