--- a/fillexcel/configure.ini
+++ b/fillexcel/configure.ini
@@ -1,18 +1,18 @@
 [postgres]
-host = gz.tystnad.tech
-port = 42345
-user = fillexcel
-password = y7wdPV46XtnQevmJ
+host = postgres1
+port = 5432
+user = postgres
+password = password
 database = fillexcel
 
 [minio]
-endpoint = localhost:9000
-access = zNpKlffFio4cBZxRxjoO
-secret = EVwOLLwzzQNhAmPWJm6WF1ha4VDR2VNi8rDL4IXk
+endpoint = minio1:9000
+access = {change_this_access_key}
+secret = {change_this_secret_key}
 secure = false
 bucket = fills
 
 [celery]
-broker = amqp://invoice:40Z9y5RqCNecG6Fx@gz.tystnad.tech:32765//
-backend = redis://default:ZI6vLhsHdKCjeiyw@gz.tystnad.tech:46379/1
+broker = amqp://fillexcel:password@rabbitmq1:5672//
+backend = redis://redis1:6379/1
 
