--- a/fillexcel/configure.ini
+++ b/fillexcel/configure.ini
@@ -1,18 +1,18 @@
 [postgres]
-host = postgres1
-port = 5432
-user = postgres
-password = password
+host = 192.168.52.81
+port = 42345
+user = fillexcel
+password = y7wdPV46XtnQevmJ
 database = fillexcel
 
 [minio]
-endpoint = minio1:9000
-access = {change_this_access_key}
-secret = {change_this_secret_key}
+endpoint = 192.168.52.81:9000
+access = zNpKlffFio4cBZxRxjoO
+secret = EVwOLLwzzQNhAmPWJm6WF1ha4VDR2VNi8rDL4IXk
 secure = false
 bucket = fills
 
 [celery]
-broker = amqp://fillexcel:password@rabbitmq1:5672//
-backend = redis://redis1:6379/1
+broker = amqp://invoice:40Z9y5RqCNecG6Fx@192.168.52.81:32765//
+backend = redis://default:ZI6vLhsHdKCjeiyw@192.168.52.81:46379/1
 
